Done with all changes

--- a/Code/public/website/css/_fonts.scss
+++ b/Code/public/website/css/_fonts.scss
@@ -11,3 +11,13 @@
 	font-family: Daneehand;
 	src: url(../font/Daneehand.otf);
 }
+
+@font-face {
+	font-family: PF_Fusion_Sans_Pro_Black;
+	src: url(../font/PFFusionSansProBlack.ttf);
+}
+
+@font-face {
+	font-family: ArialNovaW07Bold;
+	src: url(../font/ArialNovaW07Bold.ttf);
+}
