Adding Public files

--- a/Code/public/website/css/_headingBar.scss
+++ b/Code/public/website/css/_headingBar.scss
@@ -27,13 +27,17 @@
 		}
 
 		.headCenterText {
-            padding-left: 1rem;
-            padding-right: 1rem;
-			display: block;
-			font-family: BazookaRegular;
-			font-size: 30px;
-			color: #9a0000;
-			text-align: Left;
+            display: block;
+            .schName{
+                font-family: PF_Fusion_Sans_Pro_Black;
+                font-size: 35px;
+                color: #18994D;
+            }
+            .schSubHeading{
+                font-family: ArialNovaW07Bold;
+                font-size: 15px;
+                color: #272da5;
+            }
 		}
 	}
 }
