font resource issue

--- a/Code/public/website/css/style.css
+++ b/Code/public/website/css/style.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: BassetBoldItalic;
-  src: url(../font/BassetBoldItalic.TTF);
+  src: url(../font/BassetBoldItalic.ttf);
 }
 
 @font-face {
